# zksync-os-server

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  codecov.yml  default_config.yaml  deny.toml  docker-compose.yml  en_config.yaml  genesis.json  grafana_dashboard.json  run_en.sh  run_en_batch_verification.sh  run_server_batch_verification.sh  script.sh
integration-tests/: Cargo.toml  README.md  build.rs
integration-tests/src/: assert_traits.rs  contracts.rs  dyn_wallet_provider.rs  lib.rs  network.rs  prover_api.rs  prover_tester.rs  provider.rs  utils.rs
integration-tests/test-contracts/src/: SimpleRevert.sol  TestERC20.sol  TracingPrimary.sol  TracingSecondary.sol
integration-tests/tests/: api.rs  call.rs  erc20.rs  external_node.rs  filter.rs  l1.rs  mempool.rs  mod.rs  prover.rs  pubsub.rs  tracing.rs
lib/batch_verification/: Cargo.toml
lib/batch_verification/src/: lib.rs  signature.rs  verification_request.rs  verification_response.rs
lib/batch_verification/src/wire_format/: conversion.rs  mod.rs  v1.rs
lib/checkpoint_state/: Cargo.toml  README.md
lib/checkpoint_state/src/: config.rs  lib.rs  persistent_preimages.rs  persistent_state.rs  persistent_storage_map.rs  state_view.rs  storage_metrics.rs
lib/l1_sender/: Cargo.toml
lib/l1_sender/src/: batcher_metrics.rs  batcher_model.rs  commitment.rs  config.rs  debug_formatting.rs  l1_discovery.rs  lib.rs  metrics.rs  model.rs  new_blocks.rs  pipeline_component.rs  rocksdb.rs  util.rs
lib/l1_sender/src/commands/: commit.rs  execute.rs  mod.rs  prove.rs
lib/l1_watcher/: Cargo.toml
lib/l1_watcher/src/: commit_watcher.rs  config.rs  execute_watcher.rs  interop_root_watcher.rs  lib.rs  metrics.rs  rocksdb.rs  tx_watcher.rs  util.rs  watcher.rs
lib/mempool/: Cargo.toml
lib/mempool/src/: config.rs  l1_pool.rs  lib.rs  pool.rs  reth.rs  stream.rs  traits.rs  transaction.rs
lib/mini_merkle_tree/: Cargo.toml
lib/mini_merkle_tree/benches/: tree.rs
lib/mini_merkle_tree/src/: lib.rs  tests.rs
lib/multivm/: .gitignore  Cargo.toml  build.rs
lib/multivm/src/: lib.rs  version.rs
lib/multivm/src/apps/: mod.rs
lib/object_store/: Cargo.toml
lib/object_store/src/: config.rs  factory.rs  file.rs  gcs.rs  lib.rs  metrics.rs  mirror.rs  mock.rs  objects.rs  raw.rs  retries.rs  s3.rs  traits.rs
lib/observability/: Cargo.toml
lib/observability/src/: component_state_latency_tracker.rs  generic_component_state.rs  latency_distribution_tracker.rs  lib.rs  metrics.rs  prometheus.rs  sentry.rs
lib/priority_tree/: Cargo.toml
lib/priority_tree/src/: db.rs  lib.rs
lib/proxy/: Cargo.toml
lib/proxy/src/: lib.rs
lib/rpc/: Cargo.toml
lib/rpc/src/: call_fees.rs  config.rs  debug_impl.rs  eth_call_handler.rs  eth_filter_impl.rs  eth_impl.rs  eth_pubsub_impl.rs  lib.rs  metrics.rs  middleware.rs  monitoring_middleware.rs  net_impl.rs  ots_impl.rs  result.rs  rpc_storage.rs  sandbox.rs  tx_handler.rs  types.rs  web3_impl.rs  zks_impl.rs
lib/rpc_api/: Cargo.toml
lib/rpc_api/src/: debug.rs  eth.rs  filter.rs  lib.rs  net.rs  ots.rs  types.rs  web3.rs  zks.rs
lib/state/: Cargo.toml
lib/state/src/: config.rs  lib.rs  metrics.rs  persistent_preimages.rs  persistent_storage_map.rs  storage_map.rs  storage_map_view.rs  storage_metrics.rs  storage_view.rs
lib/state_full_diffs/: Cargo.toml  README.md
lib/state_full_diffs/src/: lib.rs  preimages.rs  storage.rs
lib/storage_api/: Cargo.toml
lib/storage_api/examples/: print_replayrecord_typehash.rs  print_replayrecord_version.rs
lib/storage_api/src/: batch.rs  finality.rs  lib.rs  metered_state.rs  model.rs  notifications.rs  replay.rs  replay_wire_format.rs  replay_wire_format_conversion.rs  repository.rs  state.rs
lib/storage_api/src/replay_wire_format/: conversion.rs  mod.rs  v1.rs  v2.rs  v3.rs
lib/tracing/: Cargo.toml
lib/tracing/src/: formatter.rs  lib.rs  macros.rs
loadbase/: Cargo.toml  README.md
loadbase/contracts/: .gitignore
loadbase/contracts/src/: SimpleERC20.sol
loadbase/src/: erc20.rs  erc20_worker.rs  main.rs  wallets.rs
node/sequencer/: Cargo.toml
node/sequencer/src/: batch_sink.rs  batcher.rs  block_context_provider.rs  block_replay_storage.rs  block_transport.rs  commitment.rs  config.rs  conversions.rs  genesis.rs  lib.rs  main.rs  mempool.rs  metadata.rs  metrics.rs  replay_transport.rs  reth_state.rs  tree_manager.rs  tx_conversions.rs  util.rs  zkstack_config.rs
node/sequencer/src/api/: api_tx_operations.rs  eth_call_handler.rs  eth_filter_impl.rs  eth_impl.rs  eth_pubsub_impl.rs  metrics.rs  mod.rs  result.rs  tx_handler.rs
node/sequencer/src/batcher/: batch_builder.rs  batcher_rocks_db_storage.rs  mod.rs  seal_criteria.rs  sealing_criteria.rs  util.rs
node/sequencer/src/consensus/: config.rs  conv.rs  en.rs  mn.rs  mod.rs  types.rs
node/sequencer/src/execution/: block_context_provider.rs  block_executor.rs  block_transactions_provider.rs  command_block_context_provider.rs  metrics.rs  mod.rs  sandbox.rs  transaction_stream_provider.rs  utils.rs  vm_wrapper.rs
node/sequencer/src/finality/: mod.rs
node/sequencer/src/model/: batches.rs  blocks.rs  mod.rs
node/sequencer/src/prover_api/: fake_provers_pool.rs  fri_job_manager.rs  gapless_committer.rs  metrics.rs  mod.rs  proof_storage.rs  proof_verifier.rs  prover_job_manager.rs  prover_job_map.rs  prover_server.rs  snark_job_manager.rs
node/sequencer/src/prover_input_generator/: mod.rs
node/sequencer/src/repositories/: account_property_repository.rs  api_interface.rs  block_receipt_repository.rs  bytecode_property_respository.rs  db.rs  metrics.rs  mod.rs  notifications.rs  repository_in_memory.rs  transaction_receipt_repository.rs
node/sequencer/src/storage/: block_replay_storage.rs  in_memory_account_properties.rs  in_memory_block_receipts.rs  in_memory_preimages.rs  in_memory_tx_receipts.rs  mod.rs  persistent_storage_map.rs  (+3 more)
tools/batch_storage_client/: Cargo.toml
tools/batch_storage_client/src/: main.rs
tools/cli/: Cargo.toml  README.md
tools/cli/src/: block.rs  main.rs  rlp.rs  tx.rs
(+133 files in other folders)
