[workspace]
members = [
    "lib/contract_interface",
    "lib/crypto",
    "lib/l1_sender",
    "lib/l1_watcher",
    "lib/mempool",
    "lib/merkle_tree",
    "lib/mini_merkle_tree",
    "lib/priority_tree",
    "lib/rpc",
    "lib/rpc_api",
    "lib/state",
    "lib/storage_api",
    "lib/types",
    "node/sequencer",
    "integration-tests",
    "tools/generate-deposit",
]
resolver = "3"
default-members = ["node/sequencer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os-server"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
auto_impl = "1.3.0"
blake2 = "0.10.6"
tracing = "0.1"
tracing-subscriber = "0.3"
alloy = { version = "1.0.17", default-features = false }
alloy-rlp = { version = "0.3.12" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_with = "1"
serde_json = "1"


#zk_os_forward_system = { package = "forward_system", path="../zksync-os/forward_system", features = ["evm-compatibility", "unlimited_native", "no_print"] }
#zk_ee = { package = "zk_ee", path="../zksync-os/zk_ee" }
#zk_os_basic_system = { package = "basic_system", path="../zksync-os/basic_system"}
#zk_os_api = { package = "zksync_os_api", path="../zksync-os/api"}

zk_os_forward_system = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.9", features = ["evm-compatibility", "unlimited_native", "no_print"] }
zk_ee = { package = "zk_ee", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.9" }
zk_os_basic_system = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.9" }
zk_os_api = { package = "zksync_os_api", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.9" }

#air-compiler-cli = { package = "cli", path = "../zksync-airbender/tools/cli" }
#execution_utils = { package = "execution_utils", path = "../zksync-airbender/execution_utils" }
#verifier_common = { package = "verifier_common", path = "../zksync-airbender/verifier_common" }
#full_statement_verifier = { package = "full_statement_verifier", path = "../zksync-airbender/full_statement_verifier" }

air-compiler-cli = { package = "cli", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.3.3" }
execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.3.3" }
verifier_common = { package = "verifier_common", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.3.3" }
full_statement_verifier = { package = "full_statement_verifier", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.3.3" }

tokio = "1.45.1"
tokio-stream = "0.1.17"
ruint = { version = "1.12", default-features = false }
dashmap = "6.1.0"
itertools = "0.14.0"
futures = "0.3"
vise = "0.3.0"
vise-exporter = "0.3.0"
hex = "0.4"
crossbeam-queue = "0.3"
bincode = { version = "2.0.1", features = ["serde"] }
bincode_v1 = { package = "bincode", version = "1" }
smart-config = "=0.2.0-pre"
thiserror = "2.0.12"
clap = "4.2.2"
insta = "1.29.0"
jsonrpsee = { version = "0.25.1", default-features = false }
leb128 = "0.2.5"
rayon = "1.3.1"
once_cell = "1"
proptest = "1.6.0"
rand = "0.9.1"
tempfile = "3.0.2"
base64 = "0.22.1"
axum = "0.7.9"
http = "1.3.1"
parking_lot = "0.12.4"
fs2 = "0.4.3"
test-log = "0.2.18"
backon = "1.5.1"
reqwest = "0.12.22"
time = "0.3"
criterion = "0.7.0"
sha2 = "0.10.9"
tower = "0.5.2"
tower-http = "0.6.6"
hyper = "1.6.0"
semver = "1"

zksync_vlog = "28.1.0-non-semver-compat"
zksync_storage = "28.1.0-non-semver-compat"

# Reth dependencies
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }

# "Local" dependencies
zksync_os_contract_interface = { path = "lib/contract_interface" }
zksync_os_crypto = { path = "lib/crypto" }
zksync_os_l1_sender = { path = "lib/l1_sender" }
zksync_os_l1_watcher = { path = "lib/l1_watcher" }
zksync_os_mempool = { path = "lib/mempool" }
zksync_os_mini_merkle_tree = { path = "lib/mini_merkle_tree" }
zksync_os_merkle_tree = { path = "lib/merkle_tree" }
zksync_os_priority_tree = { path = "lib/priority_tree" }
zksync_os_rpc = { path = "lib/rpc" }
zksync_os_rpc_api = { path = "lib/rpc_api" }
zksync_os_state = { path = "lib/state" }
zksync_os_storage_api = { path = "lib/storage_api" }
zksync_os_types = { path = "lib/types" }

zksync_os_sequencer = { path = "node/sequencer" }

[profile.release]
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true
