[workspace]
members = [
    "lib/contract_interface",
    "lib/crypto",
    "lib/genesis",
    "lib/l1_sender",
    "lib/l1_watcher",
    "lib/mempool",
    "lib/merkle_tree",
    "lib/mini_merkle_tree",
    "lib/priority_tree",
    "lib/rocksdb",
    "lib/rpc",
    "lib/rpc_api",
    "lib/sequencer",
    "lib/state",
    "lib/storage",
    "lib/storage_api",
    "lib/types",
    "node/bin",
    "integration-tests",
    "tools/generate-deposit",
    "lib/observability",
    "lib/object_store",
    "lib/state_full_diffs",
    "lib/status",
    "lib/multivm",
    "lib/tracing",
    "lib/pipeline",
]
resolver = "3"
default-members = ["node/bin"]

[workspace.package]
version = "0.8.1-non-semver-compat"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os-server"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
auto_impl = "1.3.0"
blake2 = "0.10.6"
tracing = "0.1"
tracing-subscriber = "0.3"
alloy = { version = "1.0.17", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-rlp = { version = "0.3.12" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_with = "3.14.0"
serde_json = "1"
sentry = "0.43.0"
regex = "1.11.3"

#zksync_os_interface = { path = "../zksync-os-interface/crates/interface" }
#zk_os_forward_system = { package = "forward_system", path = "../zksync-os/forward_system", features = ["evm-compatibility", "no_print"] }
#zk_ee = { package = "zk_ee", path = "../zksync-os/zk_ee" }
#zk_os_basic_system = { package = "basic_system", path = "../zksync-os/basic_system" }
#zk_os_api = { package = "zksync_os_api", path = "../zksync-os/api" }

zksync_os_evm_errors = { version = "0.0.7" }
zksync_os_interface = { version = "0.0.7" }

zk_os_forward_system = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.26", features = ["evm-compatibility", "no_print"] }
zk_ee = { package = "zk_ee", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.26" }
zk_os_basic_system = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.26" }
zk_os_api = { package = "zksync_os_api", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.26" }

#execution_utils = { package = "execution_utils", path = "../zksync-airbender/execution_utils" }
#full_statement_verifier = { package = "full_statement_verifier", path = "../zksync-airbender/full_statement_verifier" }

execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.4.5" }
full_statement_verifier = { package = "full_statement_verifier", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.4.5" }

zksync_os_prover_service = { git = "https://github.com/matter-labs/zksync-airbender-prover.git", tag = "v0.4.7" }

tokio = "1.45.1"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["codec"], default-features = false }
ruint = { version = "1.12", default-features = false }
dashmap = "6.1.0"
itertools = "0.14.0"
futures = "0.3"
vise = "0.3.0"
vise-exporter = "0.3.0"
bincode = { version = "2.0.1", features = ["serde"] }
smart-config = "=0.2.0-pre"
thiserror = "2.0.12"
clap = "4.2.2"
insta = "1.29.0"
jsonrpsee = { version = "0.26.0", default-features = false }
leb128 = "0.2.5"
rayon = "1.11.0"
once_cell = "1"
proptest = "1.6.0"
rand = "0.9.1"
tempfile = "3.0.2"
base64 = "0.22.1"
axum = "0.8.4"
http = "1.3.1"
fs2 = "0.4.3"
test-log = { version = "0.2.18", default-features = false }
backon = "1.5.1"
reqwest = "0.12.22"
time = "0.3"
criterion = "0.7.0"
sha2 = "0.10.9"
tower = "0.5.2"
tower-http = "0.6.6"
hyper = "1.6.0"
semver = { version = "1", features = ["serde"] }
async-stream = "0.3.6"
num_cpus = "1.17.0"
rocksdb = "0.24.0"
thread_local = "1.1.9"
pin-project = "1.1.10"
aws-config = { version = "1.8.6", default-features = false, features = [
    "behavior-version-latest",
] }
aws-runtime = { version = "1.5.10" }
aws-sdk-s3 = { version = "1.106.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
assert_matches = "1.5"
serde_yaml = "0.9"
secrecy = "0.10.3"
cargo_metadata = { version = "0.20.0", default-features = false }
tracing-logfmt = { version = "0.3.5" }
url = "2.5.7"

# Reth dependencies
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.7.0" }

# "Local" dependencies
zksync_os_contract_interface = { version = "=0.8.1-non-semver-compat", path = "lib/contract_interface" }
zksync_os_crypto = { version = "=0.8.1-non-semver-compat", path = "lib/crypto" }
zksync_os_l1_sender = { version = "=0.8.1-non-semver-compat", path = "lib/l1_sender" }
zksync_os_l1_watcher = { version = "=0.8.1-non-semver-compat", path = "lib/l1_watcher" }
zksync_os_mempool = { version = "=0.8.1-non-semver-compat", path = "lib/mempool" }
zksync_os_mini_merkle_tree = { version = "=0.8.1-non-semver-compat", path = "lib/mini_merkle_tree" }
zksync_os_merkle_tree = { version = "=0.8.1-non-semver-compat", path = "lib/merkle_tree" }
zksync_os_priority_tree = { version = "=0.8.1-non-semver-compat", path = "lib/priority_tree" }
zksync_os_observability = { version = "=0.8.1-non-semver-compat", path = "lib/observability" }
zksync_os_rocksdb = { version = "=0.8.1-non-semver-compat", path = "lib/rocksdb" }
zksync_os_rpc = { version = "=0.8.1-non-semver-compat", path = "lib/rpc" }
zksync_os_rpc_api = { version = "=0.8.1-non-semver-compat", path = "lib/rpc_api" }
zksync_os_sequencer = { version = "=0.8.1-non-semver-compat", path = "lib/sequencer" }
zksync_os_state = { version = "=0.8.1-non-semver-compat", path = "lib/state" }
zksync_os_state_full_diffs = { version = "=0.8.1-non-semver-compat", path = "lib/state_full_diffs" }
zksync_os_storage = { version = "=0.8.1-non-semver-compat", path = "lib/storage" }
zksync_os_storage_api = { version = "=0.8.1-non-semver-compat", path = "lib/storage_api" }
zksync_os_types = { version = "=0.8.1-non-semver-compat", path = "lib/types" }
zksync_os_genesis = { version = "=0.8.1-non-semver-compat", path = "lib/genesis" }
zksync_os_object_store = { version = "=0.8.1-non-semver-compat", path = "lib/object_store" }
zksync_os_status_server = { version = "=0.8.1-non-semver-compat", path = "lib/status" }
zksync_os_multivm = { version = "=0.8.1-non-semver-compat", path = "lib/multivm" }
zksync_os_tracing = { version = "=0.8.1-non-semver-compat", path = "lib/tracing" }
zksync_os_pipeline = { version = "=0.8.1-non-semver-compat", path = "lib/pipeline" }

zksync_os_bin = { version = "=0.8.1-non-semver-compat", path = "node/bin" }

#[patch.crates-io]
#zksync_os_interface = { path = "../zksync-os-interface/crates/interface" }

[profile.release]
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true
