[package]
name = "zksync_os_integration_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
build = "build.rs"

[dependencies]
zksync_os_l1_sender.workspace = true
zksync_os_l1_watcher.workspace = true
zksync_os_sequencer.workspace = true
zksync_os_contract_interface.workspace = true
zksync_os_types.workspace = true

zkos_prover = { git = "https://github.com/matter-labs/zksync-era.git", branch = "zksync-os-integration", optional = true }

alloy = { workspace = true, default-features = false, features = ["provider-anvil-node", "rand", "json-rpc"] }
anyhow.workspace = true
fs2.workspace = true
tokio.workspace = true
tempfile.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde_json.workspace = true
backon.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true

[dev-dependencies]
test-log.workspace = true

[features]
prover-tests = ["dep:zkos_prover"]
gpu-prover-tests = ["prover-tests", "zkos_prover/gpu"]
