[package]
name = "zksync_os_integration_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
build = "build.rs"

[dependencies]
zksync_os_bin.workspace = true
zksync_os_contract_interface.workspace = true
zksync_os_types.workspace = true
zksync_os_object_store.workspace = true
zksync_os_rpc_api.workspace = true
zksync_os_state_full_diffs.workspace = true

zksync_os_fri_prover = { workspace = true, optional = true }

alloy = { workspace = true, default-features = false, features = ["provider-anvil-node", "rand", "json-rpc", "pubsub", "provider-ws"] }
anyhow.workspace = true
fs2.workspace = true
tokio.workspace = true
tempfile.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde_json.workspace = true
backon.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
tower-http.workspace = true

[dev-dependencies]
test-log.workspace = true

[features]
prover-tests = ["dep:zksync_os_fri_prover"]
gpu-prover-tests = ["prover-tests", "zksync_os_fri_prover/gpu"]
