[workspace]
[package]
name = "loadbase"

edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os-server"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

#version.workspace = true
#edition.workspace = true
#authors.workspace = true
#homepage.workspace = true
#repository.workspace = true
#license.workspace = true
#keywords.workspace = true
#categories.workspace = true

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
clap  = { version = "4.5", features = ["derive"] }
ethers = { version = "2", default-features = false, features = [
    "legacy",       # legacy tx support
    "rustls",
#    "signers",      # Wallet, MnemonicBuilder
#    "k256",         # secp256k1 backend
#    "tokio-runtime"
] }
rand       = "0.8"
rand_distr = "0.4"
hdrhistogram = "7"
parking_lot = "0.12"
humantime = "2.2.0"
anyhow = "1.0.98"
hex = "0.4.3"
futures = "0.1.31"
futures-util = "0.3"
reqwest = "0.11.27"
serde_json = "1.0.140"

