[package]
name = "zksync_os_checkpoint_state"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
ruint.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
smart-config.workspace = true

zksync_storage = { git = "https://github.com/matter-labs/zksync-era.git", branch = "bf-checkpoints", package = "zksync_storage" }
zk_os_forward_system.workspace = true
zk_ee.workspace = true
dashmap.workspace = true
vise.workspace = true
