[package]
name = "zksync_os_mempool"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_types = { workspace = true, features = ["reth"] }

reth-chainspec = { workspace = true }
reth-storage-api = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-primitives-traits = { workspace = true }

alloy = { workspace = true, default-features = false, features = ["consensus", "sol-types", "eips"] }
anyhow.workspace = true
auto_impl.workspace = true
dashmap.workspace = true
futures.workspace = true
tokio.workspace = true
