[package]
name = "zksync_os_mini_merkle_tree"
description = "ZKsync OS implementation of small Merkle trees"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_types.workspace = true
zksync_os_crypto.workspace = true

alloy = { workspace = true, default-features = false }
once_cell.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "tree"
harness = false
path = "benches/tree.rs"
