[package]
name = "zksync_os_object_store"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
http.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
aws-config.workspace = true
aws-runtime.workspace = true
aws-sdk-s3.workspace = true
smart-config.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tempfile.workspace = true
serde_yaml.workspace = true
