[package]
name = "zksync_os_observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
itertools.workspace = true
tracing.workspace = true
