[package]
name = "zksync_os_observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
tracing.workspace = true
tokio.workspace = true
vise.workspace = true
vise-exporter.workspace = true
