[package]
name = "zksync_os_rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_mempool.workspace = true
zksync_os_mini_merkle_tree.workspace = true
zksync_os_rpc_api = { workspace = true, features = ["server"] }
zksync_os_state.workspace = true
zksync_os_storage_api.workspace = true
zksync_os_types.workspace = true

zk_os_api.workspace = true
zk_ee.workspace = true
zk_os_forward_system.workspace = true
zk_os_evm_interpreter.workspace = true

alloy = { workspace = true, default-features = false, features = ["eips", "eip712", "dyn-abi", "rpc-types", "json-rpc"] }
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, default-features = false, features = ["macros", "client"] }
ruint.workspace = true
serde.workspace = true
smart-config.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
vise.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
hyper.workspace = true
