[package]
name = "zksync_os_rpc_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_types.workspace = true

alloy = { workspace = true, default-features = false, features = ["eips", "eip712", "dyn-abi", "rpc-types"] }
alloy-json-rpc.workspace = true
jsonrpsee = { workspace = true, default-features = false, features = ["macros", "client"] }

[features]
server = ["jsonrpsee/server"]
