[package]
name = "zksync_os_state"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
ruint.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
smart-config.workspace = true

zksync_storage.workspace = true
zk_os_forward_system.workspace = true
zk_os_basic_system.workspace = true
zk_ee.workspace = true
dashmap.workspace = true
vise.workspace = true
