[package]
name = "zksync_os_state"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_rocksdb.workspace = true
zksync_os_genesis.workspace = true
zksync_os_storage_api.workspace = true

zksync_os_interface.workspace = true
zk_os_forward_system.workspace = true
zk_ee.workspace = true

alloy = { workspace = true, default-features = false }
anyhow.workspace = true
ruint.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
smart-config.workspace = true
dashmap.workspace = true
vise.workspace = true
