[package]
name = "zksync_os_tracing"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tracing.workspace = true
tracing-logfmt = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
serde = { workspace = true, features = ["derive"] }
